Updated Menu to new designs. (#500)
* Shuffled file hierarchy

* Refactored MenuViewController.

* Continued refactoring.

* Refactoring.

* Made two separate layouts in Menu.storyboard.

* Fixed fade animation of child menu views.

* Added animating horizontal menu action with buttons.

* Added accessibility button, refactored, added extensions.

* Updated node style.

* Always showing titles on the map.

* updated arrow icons for menu and selected menu icons.

* Removed code.

--- a/WindowExplorer/Sources/Controllers/InfoViewController/Info.storyboard
+++ b/WindowExplorer/Sources/Controllers/InfoViewController/Info.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Info View Controller-->
+        <!--Info-->
         <scene sceneID="dBK-aD-E6k">
             <objects>
-                <viewController id="d75-j9-9Ky" customClass="InfoViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Info" storyboardIdentifier="Info" id="d75-j9-9Ky" customClass="InfoViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="YEQ-Hb-AYS">
                         <rect key="frame" x="0.0" y="0.0" width="500" height="800"/>
                         <autoresizingMask key="autoresizingMask"/>
